lesson4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: homework
  name: ingress

  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: "homework.otus"
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend: 
            service:
              name: web-server-service
              port:
                number: 8000
                
       # - path: /homepage(/|$)(.*)
       #   pathType: ImplementationSpecific
       #   backend: 
      #      service:
       #       name: web-server-service
       #       port:
       #         number: 8000
